feat: refresh usecase and handler
