# internal/delivery/v1/credential_controller.go
@@ -69,6 +69,19 @@ func (controller *CredentialController) signupHandler(c *gin.Context) {
 	controller.Created(c, mapper.Credential.UserDomainToSignUpResponse(user))
 }
 
+// LoginHandler godoc
+//
+//	@Summary		Log in handler
+//	@Description	Handles log in for signed up users
+//	@Tags			Credentials
+//	@Accept			json
+//	@Produce		json
+//	@Param			loginRequest	body		dto.LoginRequest	true	"Login request body"
+//	@Success		200				{object}	model.Data{data=vo.Token}
+//	@Failure		409				{object}	model.Error{error=usecase.AppError}
+//	@Failure		422				{object}	model.Error{error=usecase.AppError}
+//	@Failure		500				{object}	model.Error{error=usecase.AppError}
+//	@Router			/credentials/login [post]
 func (controller *CredentialController) loginHandler(c *gin.Context) {
 	var req dto.LoginRequest
 
@@ -86,5 +99,32 @@ func (controller *CredentialController) loginHandler(c *gin.Context) {
 	controller.Ok(c, token)
 }
 
+// RefreshAccessHandler godoc
+//
+//	@Summary		Refresh access handler
+//	@Description	Handles log in for refresh users
+//	@Tags			Credentials
+//	@Accept			json
+//	@Produce		json
+//	@Param			refreshRequest	body		dto.RefreshRequest	true	"refresh request body"
+//	@Success		200				{object}	model.Data{data=vo.Token}
+//	@Failure		409				{object}	model.Error{error=usecase.AppError}
+//	@Failure		422				{object}	model.Error{error=usecase.AppError}
+//	@Failure		500				{object}	model.Error{error=usecase.AppError}
+//	@Router			/credentials/refresh [post]
 func (controller *CredentialController) refreshHandler(c *gin.Context) {
+	var req dto.RefreshRequest
+
+	if err := c.ShouldBindBodyWith(&req, binding.JSON); err != nil {
+		controller.ClientError(c, usecase.NewClientError("Body", err))
+		return
+	}
+
+	token, err := controller.uc.Refresh(c.Request.Context(), req.RefreshToken)
+	if err != nil {
+		controller.SummariesUseCaseError(c, err)
+		return
+	}
+
+	controller.Ok(c, token)
 }
